--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ data/penny_20_F_10_6_2022-12-17_17:04_GAUSSIAN 10 2 1.txt
 __pycache__/player.cpython-35.pyc
 __pycache__/dist.cpython-35.pyc
 __pycache__/balloons.cpython-35.pyc
+graphs/.DS_Store
